# gpr300-assignment-0

./: CMakeLists.txt
assignments/assignment0/: main.cpp
assignments/assignment1/: main.cpp
assignments/assignment1/assets/: lit.frag  lit.vert  postProc.frag  postProc.vert
assignments/assignment2/: main.cpp
assignments/assignment2/assets/: lit.vert  postProc.frag
assignments/assignment3/: main.cpp
assignments/assignment3-again/: CMakeLists.txt  main.cpp
assignments/assignment3-again/assets/: geometryPass.frag
assignments/assignment3/assets/: deferredLit.frag  deferredLit.vert  geometryPass.frag  geometryPass.vert  lit.frag
core/: CMakeLists.txt
core/ew/: model.h
core/xoxo/: Color.h  FrameBuffer.h  Framebuffer.cpp
